samples/_failures_safe/1761663771_b26c43_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4fd3fc2b.c: In function ‘main’:
./samples/SAFE/__tmp_4fd3fc2b.c:154:5: error: expected declaration or statement at end of input
  154 |     return 0;
      |     ^~~~~~
